--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -228,7 +228,8 @@
 	$( ".select2_row #book_tag_items" ).select2({
 	    theme: "bootstrap",
 	    tags: true,
-	    maximumInputLength: 10
+	    maximumInputLength: 10,
+	    maximumSelectionLength: 5
 	});
 	$(".select2").css( "width","80%" );
 
