--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -37,7 +37,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-3">
-			<%= link_to '隨機推薦', recommend_book_btn_books_url, :remote => true, :data => { :type => :json }, :class => "ajax_update btn-lg btn-primary" %>
+			<%= link_to '我猜你可能會喜歡', recommend_book_btn_books_url, :remote => true, :data => { :type => :json }, :class => "ajax_update btn-lg btn-primary" %>
 		</div>
 		<div class="col-md-8">
 			<div id="recommend_area">
