--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,14 @@
 @import "font-awesome";
 @import "select2";
 @import "select2-bootstrap";
+
+
+ .navbar-nav {
+    width: 100%;
+    text-align: center;
+    > li {
+      float: none;
+      display: inline-block;
+      margin: 10px 20px;
+    }
+ }
