--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,127 @@
     .css2 { font-size: 1em; }
     .css3 { font-size: 1em; }
     .css4 { font-size: 1em; }
+
+
+
+    html {
+    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+h5 {
+    font-size: 1.28571429em;
+    font-weight: 700;
+    line-height: 1.2857em;
+    margin: 0;
+}
+
+.card-container {
+    padding-top: 15px;
+}
+
+.card {
+    font-size: 1em;
+    overflow: hidden;
+    padding: 0;
+    border: none;
+    border-radius: .28571429rem;
+    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+}
+
+.card-block {
+    font-size: 1em;
+    position: relative;
+    margin: 0;
+    padding: 1em;
+    border: none;
+    border-top: 1px solid rgba(34, 36, 38, .1);
+    box-shadow: none;
+}
+
+.card-img-top {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.card-title {
+    font-size: 1.28571429em;
+    font-weight: 700;
+    line-height: 1.2857em;
+}
+
+.card-text {
+    clear: both;
+    margin-top: .5em;
+    color: rgba(0, 0, 0, .68);
+}
+
+.card-footer {
+    font-size: 1em;
+    position: static;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    padding: .75em 1em;
+    color: rgba(0, 0, 0, .4);
+    border-top: 1px solid rgba(0, 0, 0, .05) !important;
+    background: #fff;
+}
+
+.card-inverse .btn {
+    border: 1px solid rgba(0, 0, 0, .05);
+}
+
+.profile {
+    position: absolute;
+    top: -12px;
+    display: inline-block;
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 25px;
+    height: 25px;
+    margin: 0;
+    border: 1px solid #fff;
+    border-radius: 50%;
+}
+
+.profile-avatar {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.profile-inline {
+    position: relative;
+    top: 0;
+    display: inline-block;
+}
+
+.profile-inline ~ .card-title {
+    display: inline-block;
+    margin-left: 4px;
+    vertical-align: top;
+}
+
+.text-bold {
+    font-weight: 700;
+}
+
+.meta {
+    font-size: 1em;
+    color: rgba(0, 0, 0, .4);
+}
+
+.meta a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, .4);
+}
+
+.meta a:hover {
+    color: rgba(0, 0, 0, .87);
+}
 </style>
 
 
@@ -58,29 +179,47 @@
 
 
 <hr>
+<%= search_form_for @q do |f| %>
+    <%= f.label :title_cont %>
+    <%= f.search_field :title_cont %>
+    <%= f.submit %>
+<% end %>
+
+排序 by：<%= sort_link(@q, :issue_count, '借閱次數') %><i class="fa fa-sort"></i>
+
+<br>
+<br>
+<br>
 
 
-<table id="example" class="table table-striped">
-    <thead>
-        <tr>
-            <th style="width: 400px;">
-                <%= search_form_for @q do |f| %>
-                    <%= f.label :title_cont %>
-                    <%= f.search_field :title_cont %>
-                    <%= f.submit %>
-                <% end %>
-                書名
-            </th>
-            <th style="width: 150px">剩餘幾本</th>
-            <th style="width: 150px;"><%= sort_link(@q, :issue_count, '借閱次數') %><i class="fa fa-sort"></i></th>
-            <th>tag</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @books.each do |book| %>
-            <tr>
-                <td>
-                    <div class="pull-left">
+<div class="row">
+    <% @books.each do |book| %>
+        <div class="card-container col-sm-6 col-md-4 col-lg-4 mt-4">
+            <div class="card">
+                <% if book.picture_url.blank?%>
+                    <img class="card-img-top" src="https://picsum.photos/200/150/?random">
+                <%else%>
+                    <img src="<%=book.picture_url%>" alt="" class="card-img-top">
+                <%end%>
+
+                <div class="card-block">
+                    <figure class="profile">
+                        <img src="https://picsum.photos/200/150/?random" class="profile-avatar" alt="">
+                    </figure>
+                    <h4 class="card-title mt-3">
+                        <%= link_to book_path(book.id) do %>
+                            <%= book.title %>
+                        <%end%>
+                    </h4>
+                    <div class="meta">
+                        借閱次數：<%= book.issue_count%>
+                    </div>
+                    <div class="card-text">
+                        剩餘：<%=book.no_copies%> 本
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <small>
                         <% if book.comments.average(:score).present?%>
                             <span style="color: orange;">
                                 <% book.comments.average(:score).to_i.times do%>
@@ -88,31 +227,21 @@
                                 <%end%>
                             </span>
                         <%end%>
-                    </div>
+                    </small>
                     <br>
-                    <div>
-                        <%= link_to book_path(book.id) do %>
-                            <%= book.title %>
-                        <%end%>
-                    </div>
-                </td>
-                <td>
-                    <%=book.no_copies%>
-                </td>
-                <td>
-                    <%= book.issue_count%>
-                </td>
-                <td>
-                    <% book.tag_list.each do |tag| %>
-                        <%= link_to tagged_books_path(tag: tag), :class=>"btn btn-warning" do%>
-                            <%=tag%>
-                        <%end%>
-                    <% end %>
-                </td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
+                    <i class="fa fa-tags">
+                        <% book.tag_list.each do |tag| %>
+                            <%= link_to tagged_books_path(tag: tag), :class=>"btn btn-default btn-sm" do%>
+                                <%=tag%>
+                            <%end%>
+                        <% end %>
+                    </i>
+                </div>
+            </div>
+        </div>
+    <%end%>
+</div>
+
 
 
 
