--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,6 +37,10 @@
 	.select2, .select2-container {
 		width: 100%;
 	}
+
+	.book_photo {
+		width: 50%;
+	}
 </style>
 
 
@@ -100,7 +104,7 @@
 			<%=f.submit "新增照片連結" %>
 		<%end%>
 	<%else%>
-		<img src="<%=@book.picture_url%>" alt="">
+		<img src="<%=@book.picture_url%>" alt="" class="book_photo">
 	<%end%>
 </div>
 
