--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    <div id = "maincontainer2">
+    <div class="container" style="margin:100px auto; width: 60%;">
         <%= yield %>
     </div>
     
