--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -128,40 +128,53 @@ h5 {
 
 
 <div class="row container">
-    <div class="col-md-4">
-        <div class="row">
-            <h3>新書</h3>
+
+    <div class="col-md-7">
+
+
+        <div>
+          <h2>熱門</h2>  
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+              <li data-target="#myCarousel" data-slide-to="3"></li>
+              <li data-target="#myCarousel" data-slide-to="4"></li>
+              <li data-target="#myCarousel" data-slide-to="5"></li>
+              <li data-target="#myCarousel" data-slide-to="6"></li>
+              <li data-target="#myCarousel" data-slide-to="7"></li>
+              <li data-target="#myCarousel" data-slide-to="8"></li>
+              <li data-target="#myCarousel" data-slide-to="9"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+
+                <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
+                    <div class="item">
+                        <h5>
+                            <%=book.title%> (<%=book.issue_count%>)
+                        </h5>
+                        <img src="<%=book.picture_url || "https://picsum.photos/200/150/?random"%>" alt="Los Angeles" style="width:100%; max-height: 400px;">
+                    </div>
+                <%end%>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
-        <ul>
-            <% Book.all.order(created_at: :DESC).limit(10).each do |book|%>
-                <li>
-                    <%= link_to book_path(book.id) do%>
-                        <%=book.title[0..15] %> 
-                        <% if book.title.length > 16%>
-                            <%= "..." %>
-                        <%end%>
-                    <%end%>
-                </li>
-            <%end%>
-        </ul>
-    </div>
-    <div class="col-md-4">
-        <div class="row">
-            <h3>熱門</h3>
-        </div>
-        <ul>
-            <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
-                <li>
-                    <%= link_to book_path(book.id) do%>
-                        <%=book.title[0..15] %> 
-                        <% if book.title.length > 16%>
-                            <%= "..." %>
-                        <%end%>
-                        （<%= book.issue_count%>）
-                    <%end%>
-                </li>
-            <%end%>
-        </ul>
+
+
     </div>
 
 </div>
@@ -171,10 +184,9 @@ h5 {
 <div class="col-md-15 container">
     <div class="col-md-6" style="background-color: white;">
         <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-            <%= link_to tag.name, tagged_books_path(tag: tag.name), :class => css_class %>
+            <%= link_to tag.name, tagged_books_path(tag: tag.name), :class => "btn btn-default" %>
         <% end %>
     </div>
-    
 </div>
 
 
@@ -250,8 +262,9 @@ h5 {
 </div>
 
 
-
-
+<script>
+    $( ".carousel-inner .item" ).first().addClass("active");
+</script>
 
 
 
