--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,129 +1,140 @@
 <style>
-    .css1 { font-size: 1em; }
-    .css2 { font-size: 1em; }
-    .css3 { font-size: 1em; }
-    .css4 { font-size: 1em; }
+    .css1 {
+        font-size: 1em;
+    }
+
+    .css2 {
+        font-size: 1em;
+    }
+
+    .css3 {
+        font-size: 1em;
+    }
+
+    .css4 {
+        font-size: 1em;
+    }
 
 
 
     html {
-    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    font-size: 14px;
-}
+        font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-size: 14px;
+    }
 
-h5 {
-    font-size: 1.28571429em;
-    font-weight: 700;
-    line-height: 1.2857em;
-    margin: 0;
-}
+    h5 {
+        font-size: 1.28571429em;
+        font-weight: 700;
+        line-height: 1.2857em;
+        margin: 0;
+    }
 
-.card-container {
-    padding-top: 15px;
-}
+    .card-container {
+        padding-top: 15px;
+    }
 
-.card {
-    font-size: 1em;
-    overflow: hidden;
-    padding: 0;
-    border: none;
-    border-radius: .28571429rem;
-    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
-}
+    .card {
+        font-size: 1em;
+        overflow: hidden;
+        padding: 0;
+        border: none;
+        border-radius: .28571429rem;
+        box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+    }
 
-.card-block {
-    font-size: 1em;
-    position: relative;
-    margin: 0;
-    padding: 1em;
-    border: none;
-    border-top: 1px solid rgba(34, 36, 38, .1);
-    box-shadow: none;
-}
+    .card-block {
+        font-size: 1em;
+        position: relative;
+        margin: 0;
+        padding: 1em;
+        border: none;
+        border-top: 1px solid rgba(34, 36, 38, .1);
+        box-shadow: none;
+    }
 
-.card-img-top {
-    display: block;
-    width: 100%;
-    height: auto;
-}
+    .card-img-top {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
 
-.card-title {
-    font-size: 1.28571429em;
-    font-weight: 700;
-    line-height: 1.2857em;
-}
+    .card-title {
+        font-size: 1.28571429em;
+        font-weight: 700;
+        line-height: 1.2857em;
+    }
 
-.card-text {
-    clear: both;
-    margin-top: .5em;
-    color: rgba(0, 0, 0, .68);
-}
+    .card-text {
+        clear: both;
+        margin-top: .5em;
+        color: rgba(0, 0, 0, .68);
+    }
 
-.card-footer {
-    font-size: 1em;
-    position: static;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    padding: .75em 1em;
-    color: rgba(0, 0, 0, .4);
-    border-top: 1px solid rgba(0, 0, 0, .05) !important;
-    background: #fff;
-}
+    .card-footer {
+        font-size: 1em;
+        position: static;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        padding: .75em 1em;
+        color: rgba(0, 0, 0, .4);
+        border-top: 1px solid rgba(0, 0, 0, .05) !important;
+        background: #fff;
+    }
 
-.card-inverse .btn {
-    border: 1px solid rgba(0, 0, 0, .05);
-}
+    .card-inverse .btn {
+        border: 1px solid rgba(0, 0, 0, .05);
+    }
 
-.profile {
-    position: absolute;
-    top: -20px;
-    display: inline-block;
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 40px;
-    height: 40px;
-    margin: 0;
-    border: 1px solid #fff;
-    border-radius: 50%;
-}
+    .profile {
+        position: absolute;
+        top: -20px;
+        display: inline-block;
+        overflow: hidden;
+        box-sizing: border-box;
+        width: 40px;
+        height: 40px;
+        margin: 0;
+        border: 1px solid #fff;
+        border-radius: 50%;
+    }
 
-.profile-avatar {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
+    .profile-avatar {
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
 
-.profile-inline {
-    position: relative;
-    top: 0;
-    display: inline-block;
-}
+    .profile-inline {
+        position: relative;
+        top: 0;
+        display: inline-block;
+    }
 
-.profile-inline ~ .card-title {
-    display: inline-block;
-    margin-left: 4px;
-    vertical-align: top;
-}
+    .profile-inline~.card-title {
+        display: inline-block;
+        margin-left: 4px;
+        vertical-align: top;
+    }
 
-.text-bold {
-    font-weight: 700;
-}
+    .text-bold {
+        font-weight: 700;
+    }
 
-.meta {
-    font-size: 1em;
-    color: rgba(0, 0, 0, .4);
-}
+    .meta {
+        font-size: 1em;
+        color: rgba(0, 0, 0, .4);
+    }
 
-.meta a {
-    text-decoration: none;
-    color: rgba(0, 0, 0, .4);
-}
+    .meta a {
+        text-decoration: none;
+        color: rgba(0, 0, 0, .4);
+    }
 
-.meta a:hover {
-    color: rgba(0, 0, 0, .87);
-}
+    .meta a:hover {
+        color: rgba(0, 0, 0, .87);
+    }
 </style>
 
 
@@ -133,47 +144,47 @@ h5 {
 
 
         <div>
-          <h2>熱門</h2>  
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-              <li data-target="#myCarousel" data-slide-to="3"></li>
-              <li data-target="#myCarousel" data-slide-to="4"></li>
-              <li data-target="#myCarousel" data-slide-to="5"></li>
-              <li data-target="#myCarousel" data-slide-to="6"></li>
-              <li data-target="#myCarousel" data-slide-to="7"></li>
-              <li data-target="#myCarousel" data-slide-to="8"></li>
-              <li data-target="#myCarousel" data-slide-to="9"></li>
-            </ol>
+            <h2>熱門</h2>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#myCarousel" data-slide-to="5"></li>
+                    <li data-target="#myCarousel" data-slide-to="6"></li>
+                    <li data-target="#myCarousel" data-slide-to="7"></li>
+                    <li data-target="#myCarousel" data-slide-to="8"></li>
+                    <li data-target="#myCarousel" data-slide-to="9"></li>
+                </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
 
-                <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
+                    <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
                     <div class="item">
                         <%= link_to book_path(book.id) do %>
-                            <h3 style="padding: 10px 100px 0 100px;">
-                                <%=book.title%> (<%=book.issue_count%>)
-                            </h3>
-                            <img src="<%=book.picture_url || "https://picsum.photos/200/150/?random"%>" alt="Los Angeles" style="width:100%; max-height: 400px; padding: 30px;">
+                        <h3 style="padding: 10px 100px 0 100px;">
+                            <%=book.title%> (<%=book.issue_count%>)
+                        </h3>
+                        <img src="<%=book.picture_url || "https://picsum.photos/200/150/?random"%>" alt="Los Angeles" style="width:100%; max-height: 400px; padding: 30px;">
                         <%end%>
                     </div>
-                <%end%>
-            </div>
+                    <%end%>
+                </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
 
 
@@ -186,7 +197,7 @@ h5 {
 <div class="col-md-15 container">
     <div class="col-md-6" style="background-color: white;">
         <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-            <%= link_to tag.name, tagged_books_path(tag: tag.name), :class => "btn btn-default" %>
+        <%= link_to tag.name, tagged_books_path(tag: tag.name), :class => "btn btn-default" %>
         <% end %>
     </div>
 </div>
@@ -194,9 +205,9 @@ h5 {
 
 <hr>
 <%= search_form_for @q do |f| %>
-    <%= f.label :title_cont %>
-    <%= f.search_field :title_cont %>
-    <%= f.submit %>
+<%= f.label :title_cont %>
+<%= f.search_field :title_cont %>
+<%= f.submit %>
 <% end %>
 
 排序 by：<%= sort_link(@q, :issue_count, '借閱次數') %><i class="fa fa-sort"></i>
@@ -208,68 +219,65 @@ h5 {
 
 <div class="row">
     <% @books.each do |book| %>
-        <div class="card-container col-sm-6 col-md-4 col-lg-4 mt-4">
-            <div class="card">
-                <% if book.picture_url.blank?%>
-                    <img class="card-img-top" src="https://picsum.photos/200/150/?random">
-                <%else%>
-                    <img src="<%=book.picture_url%>" alt="" class="card-img-top">
-                <%end%>
+    <div class="card-container col-sm-6 col-md-4 col-lg-4 mt-4">
+        <div class="card">
+            <% if book.picture_url.blank?%>
+            <img class="card-img-top" src="https://picsum.photos/200/150/?random">
+            <%else%>
+            <img src="<%=book.picture_url%>" alt="" class="card-img-top">
+            <%end%>
 
-                <div class="card-block">
-                    <figure class="profile">
-                        <% if book.users.size > 0%>
-                            <% book.users.each do |user|%>
-                                <img src="<%=user.img_url%>" alt="" class="profile-avatar">
-                            <%end%>
-                        <%else%>
+            <div class="card-block">
+                <figure class="profile">
+                    <% if book.users.size > 0%>
+                    <% book.users.each do |user|%>
+                    <img src="<%=user.img_url%>" alt="" class="profile-avatar">
+                    <%end%>
+                    <%else%>
 
-                        <%end%>
-                        
-                    </figure>
-                    <h4 class="card-title mt-3">
-                        <%= link_to book_path(book.id) do %>
-                            <%= book.title %>
-                        <%end%>
-                    </h4>
-                    <div class="meta">
-                        借閱次數：<%= book.issue_count%>
-                    </div>
-                    <div class="card-text">
-                        剩餘：<%=book.no_copies%> 本
-                    </div>
+                    <%end%>
+
+                </figure>
+                <h4 class="card-title mt-3">
+                    <%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                    <%end%>
+                </h4>
+                <div class="meta">
+                    所屬單位：<%= book.organization.name%>
                 </div>
-                <div class="card-footer">
-                    <small>
-                        <% if book.comments.average(:score).present?%>
-                            <span style="color: orange;">
-                                <% book.comments.average(:score).to_i.times do%>
-                                    &#9733;
-                                <%end%>
-                            </span>
-                        <%end%>
-                    </small>
-                    <br>
-                    <i class="fa fa-tags">
-                        <% book.tag_list.each do |tag| %>
-                            <%= link_to tagged_books_path(tag: tag), :class=>"btn btn-default btn-sm" do%>
-                                <%=tag%>
-                            <%end%>
-                        <% end %>
-                    </i>
+                <div class="meta">
+                    借閱次數：<%= book.issue_count%>
+                </div>
+                <div class="card-text">
+                    剩餘：<%=book.no_copies%> 本
                 </div>
             </div>
+            <div class="card-footer">
+                <small>
+                    <% if book.comments.average(:score).present?%>
+                    <span style="color: orange;">
+                        <% book.comments.average(:score).to_i.times do%>
+                        &#9733;
+                        <%end%>
+                    </span>
+                    <%end%>
+                </small>
+                <br>
+                <i class="fa fa-tags">
+                    <% book.tag_list.each do |tag| %>
+                    <%= link_to tagged_books_path(tag: tag), :class=>"btn btn-default btn-sm" do%>
+                    <%=tag%>
+                    <%end%>
+                    <% end %>
+                </i>
+            </div>
         </div>
+    </div>
     <%end%>
 </div>
 
 
 <script>
-    $( ".carousel-inner .item" ).first().addClass("active");
+    $(".carousel-inner .item").first().addClass("active");
 </script>
-
-
-
-
-
-
