--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,122 +1,131 @@
 <style>
-	*{font-family:"Courier New", Courier, monospace}
+    * {
+        font-family: "Courier New", Courier, monospace
+    }
 
-	form p,
-	form input[type="submit"] {
-	  text-align: center;
-	  font-size: 20px;
-	}
+    form p,
+    form input[type="submit"] {
+        text-align: center;
+        font-size: 20px;
+    }
 
-	#wrapper form input[type="submit"] {
-	  border: 1px solid #d9d9d9;
-	  background-color: #efefef;
-	}
+    #wrapper form input[type="submit"] {
+        border: 1px solid #d9d9d9;
+        background-color: #efefef;
+    }
 
-	input[type="radio"] {
-	  display: none;
-	}
+    input[type="radio"] {
+        display: none;
+    }
 
-	label {
-	  color: grey;
-	}
+    label {
+        color: grey;
+    }
 
-	.clasificacion {
-	  direction: rtl;
-	  unicode-bidi: bidi-override;
-	}
+    .clasificacion {
+        direction: rtl;
+        unicode-bidi: bidi-override;
+    }
 
-	label:hover,
-	label:hover ~ label {
-	  color: orange;
-	}
+    label:hover,
+    label:hover~label {
+        color: orange;
+    }
 
-	input[type="radio"]:checked ~ label {
-	  color: orange;
-	}
+    input[type="radio"]:checked~label {
+        color: orange;
+    }
 
-	.select2, .select2-container {
-		width: 100%;
-	}
+    .select2,
+    .select2-container {
+        width: 100%;
+    }
 
-	.book_photo {
-		width: 50%;
-	}
+    .book_photo {
+        width: 50%;
+    }
 </style>
 
 
 
 <table class="table table-striped">
-	<thead>
-		<tr>
-			<th style="width: 500px">書名</th>
-			<th style="width: 100px">剩餘幾本</th>
-			<th style="width: 50px"></th>
-			<th style="width: 300px">目前正在閱讀</th>
-		<tr>
-	</thead>
-	<tbody>
-		<tr>
+    <thead>
+        <tr>
+            <th style="width: 500px">書名</th>
+            <th style="width: 100px">單位</th>
+            <th style="width: 100px">剩餘幾本</th>
+            <th style="width: 50px"></th>
+            <th style="width: 300px">目前正在閱讀</th>
+        <tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <div class="pull-left">
+                    <% if @book.comments.average(:score).present?%>
+                    <span style="color: orange;">
+                        <% @book.comments.average(:score).to_i.times do%>
+                        &#9733;
+                        <%end%>
+                    </span>
+                    <%end%>
+                </div>
+                <br>
+                <div>
+                    <%= @book.title %>
+                </div>
+            </td>
 			<td>
-				<div class="pull-left">
-					<% if @book.comments.average(:score).present?%>
-						<span style="color: orange;">
-							<% @book.comments.average(:score).to_i.times do%>
-								&#9733;
-							<%end%>
-						</span>
-					<%end%>
-				</div>
-				<br>
-				<div>
-					<%= @book.title %>
-				</div>
+				<%= @book.organization.name%>
 			</td>
-			<td><%= @book.no_copies %></td>
-			<td>
-				<%if current_user.books.ids.include?(@book.id)%>
-					<div class="btn btn-primary disable">已借</div>
-				<%else%>
-					<% if @book.no_copies == 0 %>
-						
-					<%else%>
-						<%= link_to book_issue_path(@book), :class => "btn btn-success",:method => :patch do%>
-							借書
-						<%end%>
-					<%end%>
-				<%end%>
-			</td>
-			<td>
-				<ul>
-					<% @book.users.each do |u|%>
-						<li> <%= u.name or u.email %></li>
-					<%end%>
-				</ul>
-			</td>
-		</tr>
-	</tbody>
+            <td>
+                <%= @book.no_copies %>
+            </td>
+            <td>
+                <%if current_user.books.ids.include?(@book.id)%>
+                <div class="btn btn-primary disable">已借</div>
+                <%else%>
+                <% if @book.no_copies == 0 %>
+
+                <%else%>
+                <%= link_to book_issue_path(@book), :class => "btn btn-success",:method => :patch do%>
+                借書
+                <%end%>
+                <%end%>
+                <%end%>
+            </td>
+            <td>
+                <ul>
+                    <% @book.users.each do |u|%>
+                    <li> <%= u.name or u.email %></li>
+                    <%end%>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
 </table>
 
 <div>
-	<% if @book.picture_url.blank?%>
-		<%= form_for @book, :url => book_add_book_img_url_path(@book), :method=> :GET do |f| %>
-			<h5>營運組很辛苦！如果您有看到這行字，代表這本書還沒有照片，請 <a style="color:blue;" target="_blank" href="https://www.google.com/search?q=<%=@book.title%>&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjt4f3m2JriAhUL7rwKHSxPB08Q_AUIDigB&cshid=1557825672093608&biw=1420&bih=696">google 照片的連結</a> ，複製貼上即可，謝謝您的貢獻</h5>
-			<%=f.text_field :picture_url ,:style=> "width:100%"%>
-			<%=f.submit "新增照片連結" %>
-		<%end%>
-	<%else%>
-		<img src="<%=@book.picture_url%>" alt="" class="book_photo">
-	<%end%>
+    <% if @book.picture_url.blank?%>
+    <%= form_for @book, :url => book_add_book_img_url_path(@book), :method=> :GET do |f| %>
+    <h5>營運組很辛苦！如果您有看到這行字，代表這本書還沒有照片，請 <a style="color:blue;" target="_blank" href="https://www.google.com/search?q=<%=@book.title%>&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjt4f3m2JriAhUL7rwKHSxPB08Q_AUIDigB&cshid=1557825672093608&biw=1420&bih=696">google 照片的連結</a> ，複製貼上即可，謝謝您的貢獻</h5>
+    <%=f.text_field :picture_url ,:style=> "width:100%"%>
+    <%=f.submit "新增照片連結" %>
+    <%end%>
+    <%else%>
+    <img src="<%=@book.picture_url%>" alt="" class="book_photo">
+    <%end%>
 </div>
 
 <h2>Tag</h2>
 <div class="row select2_row">
-  <div class="col-sm-12 offset-sm-2">
-    <%= simple_form_for @book, url: book_add_tag_path(@book), method: :GET  do |f_tag| %>
-		<%= f_tag.error_notification %>
-		<%= f_tag.input :tag_items, as: :select, collection: @tags_name_array, label_method: :name,value_method: :name, input_html: {multiple: true} %>
-		<%= f_tag.submit "update tag", class: "btn-primary"%>
-    <% end %>
-  </div>
+    <div class="col-sm-12 offset-sm-2">
+        <%= simple_form_for @book, url: book_add_tag_path(@book), method: :GET  do |f_tag| %>
+        <%= f_tag.error_notification %>
+        <%= f_tag.input :tag_items, as: :select, collection: @tags_name_array, label_method: :name,value_method: :name, input_html: {multiple: true} %>
+        <%= f_tag.submit "update tag", class: "btn-primary"%>
+        <% end %>
+    </div>
 </div>
 
 
@@ -124,117 +133,125 @@
 <br>
 
 <div class="container">
-	<div class="row">
-		<div class="col-sm-12">
-			<h3>留言</h3>
-		</div><!-- /col-sm-12 -->
-	</div><!-- /row -->
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>留言</h3>
+        </div><!-- /col-sm-12 -->
+    </div><!-- /row -->
 
-	<% @book.comments.each do |comment|%>
-		<div class="row">
-			<div class="col-sm-1">
-				<div class="thumbnail">
-					<img class="img-responsive user-photo" src="<%=comment.user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
-				</div><!-- /thumbnail -->
-			</div><!-- /col-sm-1 -->
+    <% @book.comments.each do |comment|%>
+    <div class="row">
+        <div class="col-sm-1">
+            <div class="thumbnail">
+                <img class="img-responsive user-photo" src="<%=comment.user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
+            </div><!-- /thumbnail -->
+        </div><!-- /col-sm-1 -->
 
-			<div class="col-sm-5">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<strong><%=comment.user.name or comment.user.email%></strong> <span class="text-muted"><%=comment.created_at.in_time_zone("Taipei").strftime("%Y/%m/%d %H:%M")%></span> 
-						<span class="pull-right">
-							<% if comment.score.present?%>
-								<span style="color: orange;">
-									<% comment.score.to_i.times do%>
-										&#9733;
-									<%end%>
-								</span>
-							<%end%>
-						</span>
-					</div>
-					<div class="panel-body">
-						<%=comment.content%>
-						<%= link_to book_delete_comment_path(@book,:comment_id => comment.id), :class=>"pull-right btn btn-default btn-xs", data: {:confirm=>'Are you sure?'} do%>
-							刪除
-						<%end%>
-					</div><!-- /panel-body -->
-				</div><!-- /panel panel-default -->
-			</div><!-- /col-sm-5 -->
+        <div class="col-sm-5">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <strong><%=comment.user.name or comment.user.email%></strong> <span class="text-muted"><%=comment.created_at.in_time_zone("Taipei").strftime("%Y/%m/%d %H:%M")%></span>
+                    <span class="pull-right">
+                        <% if comment.score.present?%>
+                        <span style="color: orange;">
+                            <% comment.score.to_i.times do%>
+                            &#9733;
+                            <%end%>
+                        </span>
+                        <%end%>
+                    </span>
+                </div>
+                <div class="panel-body">
+                    <%=comment.content%>
+                    <%= link_to book_delete_comment_path(@book,:comment_id => comment.id), :class=>"pull-right btn btn-default btn-xs", data: {:confirm=>'Are you sure?'} do%>
+                    刪除
+                    <%end%>
+                </div><!-- /panel-body -->
+            </div><!-- /panel panel-default -->
+        </div><!-- /col-sm-5 -->
 
-		</div><!-- /row -->
-	<%end%>
+    </div><!-- /row -->
+    <%end%>
 
-	<%= form_for @new_comment , :url => book_create_comment_path(@book), :method=> :GET do |f| %>
-		<div class="row">
-			<div class="col-sm-1">
-				<div class="thumbnail">
-					<img class="img-responsive user-photo" src="<%=current_user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
-				</div><!-- /thumbnail -->
-			</div><!-- /col-sm-1 -->
+    <%= form_for @new_comment , :url => book_create_comment_path(@book), :method=> :GET do |f| %>
+    <div class="row">
+        <div class="col-sm-1">
+            <div class="thumbnail">
+                <img class="img-responsive user-photo" src="<%=current_user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
+            </div><!-- /thumbnail -->
+        </div><!-- /col-sm-1 -->
 
-			<div class="col-sm-5">
-				<div class="panel panel-default">
-					<div class="panel-heading" id="stars-wrapper">
-						<strong><%=current_user.name or current_user.email%></strong>
-						<span class="pull-right">
-						<%= f.number_field :score ,max:"5",min:"1", :class=>"rating hide"%>
+        <div class="col-sm-5">
+            <div class="panel panel-default">
+                <div class="panel-heading" id="stars-wrapper">
+                    <strong><%=current_user.name or current_user.email%></strong>
+                    <span class="pull-right">
+                        <%= f.number_field :score ,max:"5",min:"1", :class=>"rating hide"%>
 
-					    <p class="clasificacion">
-					       <input id="comment_content-1" type="radio" name="comment[content]" value="5"><!--
-					      --><label for="comment_content-1">&#9733;</label><!--
-					      --><input id="comment_content-2" type="radio" name="comment[content]" value="4"><!--
-					      --><label for="comment_content-2">&#9733;</label><!--
-					      --><input id="comment_content-3" type="radio" name="comment[content]" value="3"><!--
-					      --><label for="comment_content-3">&#9733;</label><!--
-					      --><input id="comment_content-4" type="radio" name="comment[content]" value="2"><!--
-					      --><label for="comment_content-4">&#9733;</label><!--
-					      --><input id="comment_content-5" type="radio" name="comment[content]" value="1"><!--
+                        <p class="clasificacion">
+                            <input id="comment_content-1" type="radio" name="comment[content]" value="5">
+                            <!--
+					      --><label for="comment_content-1">&#9733;</label>
+                            <!--
+					      --><input id="comment_content-2" type="radio" name="comment[content]" value="4">
+                            <!--
+					      --><label for="comment_content-2">&#9733;</label>
+                            <!--
+					      --><input id="comment_content-3" type="radio" name="comment[content]" value="3">
+                            <!--
+					      --><label for="comment_content-3">&#9733;</label>
+                            <!--
+					      --><input id="comment_content-4" type="radio" name="comment[content]" value="2">
+                            <!--
+					      --><label for="comment_content-4">&#9733;</label>
+                            <!--
+					      --><input id="comment_content-5" type="radio" name="comment[content]" value="1">
+                            <!--
 					      --><label for="comment_content-5">&#9733;</label>
-					    </p>
+                        </p>
 
 
 
-						</span>
-					</div>
-					<div class="panel-body">
-						<%= f.text_area :content, style: ' width: 100%; height: 100px; display: block'%>
-						<br>
-						<%= f.submit "建立留言", :class=>"btn btn-primary pull-right"%>
-					</div><!-- /panel-body -->
-				</div><!-- /panel panel-default -->
-			</div><!-- /col-sm-5 -->
-		</div><!-- /row -->
-	<% end %>
+                    </span>
+                </div>
+                <div class="panel-body">
+                    <%= f.text_area :content, style: ' width: 100%; height: 100px; display: block'%>
+                    <br>
+                    <%= f.submit "建立留言", :class=>"btn btn-primary pull-right"%>
+                </div><!-- /panel-body -->
+            </div><!-- /panel panel-default -->
+        </div><!-- /col-sm-5 -->
+    </div><!-- /row -->
+    <% end %>
 
 </div><!-- /container -->
 
 
 <script>
-	$("#comment_content-5").on('click',function(){
-		$("#comment_score")[0].value = 1
-	});
-	$("#comment_content-4").on('click',function(){
-		$("#comment_score")[0].value = 2
-	});
-	$("#comment_content-3").on('click',function(){
-		$("#comment_score")[0].value = 3
-	});
-	$("#comment_content-2").on('click',function(){
-		$("#comment_score")[0].value = 4
-	});
-	$("#comment_content-1").on('click',function(){
-		$("#comment_score")[0].value = 5
-	});
+    $("#comment_content-5").on('click', function() {
+        $("#comment_score")[0].value = 1
+    });
+    $("#comment_content-4").on('click', function() {
+        $("#comment_score")[0].value = 2
+    });
+    $("#comment_content-3").on('click', function() {
+        $("#comment_score")[0].value = 3
+    });
+    $("#comment_content-2").on('click', function() {
+        $("#comment_score")[0].value = 4
+    });
+    $("#comment_content-1").on('click', function() {
+        $("#comment_score")[0].value = 5
+    });
 
 
-// select2
+    // select2
 
-	$( ".select2_row #book_tag_items" ).select2({
-	    theme: "bootstrap",
-	    tags: true,
-	    maximumInputLength: 10,
-	    maximumSelectionLength: 5
-	});
-	$(".select2").css( "width","80%" );
-
+    $(".select2_row #book_tag_items").select2({
+        theme: "bootstrap",
+        tags: true,
+        maximumInputLength: 10,
+        maximumSelectionLength: 5
+    });
+    $(".select2").css("width", "80%");
 </script>
