--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -29,6 +29,15 @@
                 借閱次數：<%= book.issue_count%>
             </div>
             <div class="card-text">
+                作者：<%=book.author%>
+            </div>
+            <div class="card-text">
+                分類：<%=book.genre%>
+            </div>
+            <div class="card-text">
+                書本介紹：<%=book.description_url%>
+            </div>
+            <div class="card-text">
                 剩餘：<%=book.no_copies%> 本
             </div>
         </div>
