--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -35,7 +35,8 @@
                 分類：<%=book.genre%>
             </div>
             <div class="card-text">
-                書本介紹：<%=book.description_url%>
+                書本介紹：<a href=<%=book.description_url%>> link </a>
+
             </div>
             <div class="card-text">
                 剩餘：<%=book.no_copies%> 本
