--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -37,7 +37,7 @@
             <div class="card-text">
                 書本介紹：
                 <% if book.description_url.exist?%>
-                <a href=<%=book.description_url%>> link </a>
+                <a target="_blank" href=<%=book.description_url%>> link </a>
                 <%end%>
 
             </div>
